# Thretris

./: .gitignore  README.md  launchconfig.cacao.yml  meson.build
assets/: game.cubedef.yml
assets/shaders/: block.shaderdef.yml  plat.shaderdef.yml
include/: BlkMatOpt.hpp  CamMgr.hpp  GameMgr.hpp  RandomScripts.hpp  RandomStuff.hpp  Thretris.hpp  Thretromino.hpp
scripts/: bundle_playground.py  vsgen.py
src/: CamMgr.cpp  GameMgr.cpp  Thretris.cpp  ThretrisMain.cpp  Thretromino.cpp
src/shaders/: block.ps.hlsl  block.vs.hlsl  plat.ps.hlsl  plat.vs.hlsl  texmacro.hlsl
subprojects/: assimp.wrap  audiolibs.wrap  cacaoengine.wrap  freetype.wrap  guid.wrap  harfbuzz.wrap  icu.wrap  openal-soft.wrap  sdl3.wrap  spirv-cross.wrap  yaml.wrap
